src/styles/new.css
/* ... */
#footer {
  padding: 15px;
}

#content {
  padding-top: 75px;
}

#home {
  display: flex;
  background-color: var(--primary-bg-color);
  /* margin-top: 85px; */
  /* height: 500px; */
  color: var(--text-color);
  padding-bottom: 20px;
  line-height: 1.6rem;
}

.personal {
  background-color: var(--primary-bg-color);
  flex: 1;
  height: 100%;
  margin-right: 5px;
}
.personal > h2,
.personal > h3,
.personal > div {
  margin-bottom: 0.5em;
}
.biography {
  background-color: var(--primary-bg-color);
  flex: 2;
  height: 100%;
}
#home h2 {
  margin: 10px 0px;
}
#home h3 {
  margin-top: 0;
}
#home p {
  font-size: 100%;
}
#bio > h2 {
  margin-top: 20px;
}

#bio > p:nth-child(3) {
  margin-bottom: 0;
}

#profile {
  height: 300px;
  width: 300px;
  border-radius: 50%;
  margin: auto;
  overflow: hidden;
}

#icons {
  display: flex;
  justify-content: center;
  /* gap: 10px; */
  margin: 5px 90px 0px 90px;
}
.icons-icon {
  width: 30px;
  height: 30px;
  margin: 0px 5px;

  -webkit-transition: -webkit-transform 0.7s;
  -moz-transition: -moz-transform 0.7s;
  -ms-transition: -ms-transform 0.7s;
  -o-transition: -o-transform 0.7s;
  transition: transform 0.7s;
}
.icons-icon:hover {
  -webkit-transform: scale(1.3, 1.3);
  -moz-transform: scale(1.3, 1.3);
  -ms-transform: scale(1.3, 1.3);
  -o-transform: scale(1.3, 1.3);
  transform: scale(1.3, 1.3);
}

#bio {
  display: block;
  text-align: start;
}
#education {
  display: flex;
  text-align: start;
}

#education > div {
  flex: 1;
}

@media screen and (max-width: 370px) {
  #home p {
    font-size: 0.8rem;
  }
}
#current-learn {
  margin-top: 0;
}
#current-learn > li {
  margin-bottom: 7px;
  font-weight: bold;
}

#love {
  color: var(--secondary-bg-color);
  font-weight: bolder;
}
.school > .info > p {
  margin: 0;
}
.school > .icon {
  float: left;
  margin: 0px 25px;
}

.school > .vcu-icon {
  float: left;
  margin: 0px 5px;
}
.school > .icon > #uor {
  height: 30px;
  width: 30px;
  margin: 6px 0px;
}
.school > .icon-ex {
  float: left;
  margin: 0px 30px;
}
.school > .icon-ex > .arrow {
  height: 20px;
  width: 20px;
  margin: 15px 0px;
  cursor: pointer;
  -webkit-transition: -webkit-transform 0.7s;
  -moz-transition: -moz-transform 0.7s;
  -ms-transition: -ms-transform 0.7s;
  -o-transition: -o-transform 0.7s;
  transition: transform 0.7s;
}
.school > .icon-ex > .rotate {
  height: 20px;
  width: 20px;
  margin: 20px 0px 10px 0px;
  transform: rotate(90deg);
  -webkit-transition: -webkit-transform 0.7s;
  -moz-transition: -moz-transform 0.7s;
  -ms-transition: -ms-transform 0.7s;
  -o-transition: -o-transform 0.7s;
  transition: transform 0.7s;
}

@media screen and (min-width: 40em) {
  .school > .icon-ex > .arrow:hover {
    -webkit-transform: scale(1.3, 1.3);
    -moz-transform: scale(1.3, 1.3);
    -ms-transform: scale(1.3, 1.3);
    -o-transform: scale(1.3, 1.3);
    transform: scale(1.3, 1.3);
  }
  .school > .icon-ex > .rotate:hover {
    -webkit-transform: scale(1.3, 1.3);
    -moz-transform: scale(1.3, 1.3);
    -ms-transform: scale(1.3, 1.3);
    -o-transform: scale(1.3, 1.3);
    /* transform: scale(1.3, 1.3); */
    transform: rotate(90deg);
  }
}

.school > .vcu-icon > #vcu {
  height: 30px;
  width: 69px;
  margin: 6px 0px;
}

.job-list {
  margin-top: 0;
  padding-left: 100px;
}

#home-top {
  /* margin: 0.2em; */
}

@media screen and (max-width: 1145px) and (min-width: 800px) {
  #home {
    flex-direction: column;
  }
  /* #icons {
    display: flex;
    justify-content: center;
    gap: 10px;
    margin: 5px 30vw 0px 30vw;
  } */
  .personal {
    margin: 0;
  }
}
@media only screen and (max-width: 800px) {
  #home,
  #education {
    display: block;
  }
  #home h2 {
    text-align: center;
    margin-top: 2rem;
    /* text-decoration: underline; */
  }
  /* #icons {
    display: flex;
    justify-content: center;
    gap: 10px;
    width: 100%;
    padding: 0 20vw;
    margin: 0 auto;
  } */
  .personal {
    margin: 0;
  }
}

